--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Przykładowa strona</title>
+    <title>Zadanie 1</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
@@ -13,103 +13,61 @@
 
 <body>
 
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-        <div class="container">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <a class="navbar-brand" href="#">Navbar</a>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="http://wp.pl">Link</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
-                    </li>
-
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </div>
-    </nav>
-    <div class="header">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h2>Witaj Gościu</h2>
-                    <p>Znajdujesz się na mojej przykładowej stronie</p>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="container">
         <div class="grid">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati facere ipsum, molestias sunt error maxime expedita doloremque qui neque perferendis dolorum dolorem eveniet quaerat in modi blanditiis voluptatum libero repudiandae.
+            <strong>Tutaj jest klasa Grid</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati facere ipsum, molestias sunt error maxime expedita doloremque qui neque perferendis dolorum dolorem eveniet quaerat in modi blanditiis voluptatum libero repudiandae.
         </div>
-        <div class="grid-12" style="margin:10px;">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum voluptatem hic voluptates id minus dolores provident, optio, fugit ut blanditiis suscipit libero incidunt quia eius minima quis pariatur ducimus praesentium.
-        </div>
-        <p>jakiś tam text</p>
-
-    </div>
-
-    <div class="container">
-        <div class="grid">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati facere ipsum, molestias sunt error maxime expedita doloremque qui neque perferendis dolorum dolorem eveniet quaerat in modi blanditiis voluptatum libero repudiandae.
-        </div>
-        <div class="grid-1" style="margin:10px;">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum voluptatem hic voluptates id minus dolores provident, optio, fugit ut blanditiis suscipit libero incidunt quia eius minima quis pariatur ducimus praesentium.
+        <div class="grid grid-12" style="margin-top:10px;">
+            <strong>Tutaj jest klasa Grid i klasa grid-12</strong> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum voluptatem hic voluptates id minus dolores provident, optio, fugit ut blanditiis suscipit libero incidunt quia eius minima quis pariatur ducimus praesentium.
         </div>
 
+        <br>
+        <div class="nav">
+            <a href="http://google.com">Google</a>
+            <a href="#">Pusty link</a>
+        </div>
+        <div class="inputy" style="margin-top:20px;">
+            <form>
+                <input type="radio" name="gender1" value="male" checked> Male
+                <br>
+                <input type="radio" name="gender2" value="female"> Female
+                <br>
+                <input type="radio" name="gender3" value="other"> Other
 
-    </div>
-
-    <div id="text">
-        <p><span>sdadasd</span></p>
-        <p>sdadasd</p>
-        <p>drugi sdadasd</p>
-    </div>
-
-    <span class="pagination-item">sdfsdfsdf</span>
-
-    <div class="pagination-item">sdfsdfsdf</div>
-    <span>
-        <div class="pagination-item">sdfsdfsdf</div>
-    </span>
-    <div class="pagination-item">sdfsdfsdf</div>
-
-    <nav class="navbar fixed-bottom navbar-light bg-faded">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="navbar-brand" href="#">Footer</a>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-            </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                <input type="checkbox" name="vehicle" value="Bike"> I have a bike
+                <br>
+                <input type="checkbox" name="vehicle" value="Car" checked> I have a car
+                <br>
             </form>
+
         </div>
-    </nav>
+
+
+        <div id="text" style="margin-top:20px;">
+            <p><span>pierwszy</span></p>
+
+            <p>Treść1</p>
+            <p>Treść2</p>
+            <p></p>
+            <p>Treść 3</p>
+            <p></p>
+        </div>
+
+        <div class="pagination-item"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae accusamus sint laborum laboriosam labore nam iure ut, voluptatem illum tempora voluptatibus commodi quo id, dolorem eveniet, quam veritatis perferendis iste.</span></div>
+
+        <span class="pagination-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint eligendi quidem dolores. Repellendus quis voluptates, sit quia sunt corporis vel ab, magni dolorem quae ad aut explicabo incidunt labore dolores.</span>
+
+        <div class="pagination-item"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos voluptatum quas ea doloremque explicabo, debitis reprehenderit error possimus molestiae quos repudiandae rem minus quo assumenda obcaecati saepe, cum vero. Repellat?</span></div>
+
+        <span class="pagination-item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis obcaecati maxime eveniet expedita est praesentium quis quo, accusamus consequatur nemo cupiditate doloribus, quidem quam similique! Ipsa, neque, culpa? Ea, autem.</span>
+
+    </div>
+
+
+
+
+
+
 
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/scripts.js"></script>
